@@ -3,6 +3,7 @@ package com.umerqureshicodes.tidier.montages;
 
 import com.umerqureshicodes.tidier.Utilities.TwelveLabsTimeStampResponse;
 import com.umerqureshicodes.tidier.Utilities.WebSocketServiceMessage;
+import com.umerqureshicodes.tidier.s3.S3Service;
 import com.umerqureshicodes.tidier.videos.*;
 import kong.unirest.HttpResponse;
 import kong.unirest.Unirest;
@@ -11,10 +12,13 @@ import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 
 import java.io.*;
+import java.net.URI;
+import java.net.URL;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
+import java.util.UUID;
 
 @Service
 public class MontageService {
@@ -27,43 +31,27 @@ public class MontageService {
     private String backendHost;
     private final MontageRepo montageRepo;
     private final VideoService videoService;
+    private final S3Service s3Service;
     private final SimpMessagingTemplate messagingTemplate;
-    public MontageService(MontageRepo montageRepo, VideoService videoService, SimpMessagingTemplate messagingTemplate) {
+    public MontageService(MontageRepo montageRepo, VideoService videoService, S3Service s3Service, SimpMessagingTemplate messagingTemplate) {
         this.montageRepo = montageRepo;
         this.videoService = videoService;
+        this.s3Service = s3Service;
         this.messagingTemplate = messagingTemplate;
     }
 
-    private void notify(String message, String montagePath) {
-        // Push message to all clients subscribed to /topic/montage-progress
-        messagingTemplate.convertAndSend("/topic/montage-progress", new WebSocketServiceMessage(message, montagePath));
-    }
+//    private void notify(String message, String montagePath) {
+//        // Push message to all clients subscribed to /topic/montage-progress
+//        messagingTemplate.convertAndSend("/topic/montage-progress", new WebSocketServiceMessage(message, montagePath));
+//    }
 
-    private void deleteTrimmedUploads(){
-        File dir = new File(projectPath+"/trimmed-uploads");
 
-        if (dir.exists() && dir.isDirectory()) {
-            File[] files = dir.listFiles();
-            if (files != null) {
-                for (File file : files) {
-                        if (file.delete()) {
-                            System.out.println("Deleted: " + file.getName());
-                        } else {
-                            System.out.println("Failed to delete: " + file.getName());
-                        }
-                }
-            }
-        } else {
-            System.out.println("Directory does not exist or is not a directory.");
-        }
-    }
-
-    public MontageResponseDTO convertToDTO(Montage montage) {
+    public MontageResponseDTO convertToDTO(Montage montage, String montageUrl) {
         List<VideoResponseDTO> videoResponseDTOs = new ArrayList<>();
         for (Video video: montage.getVideos()){
             videoResponseDTOs.add(new VideoResponseDTO(video.getVideoId(),video.getName()));
         }
-        return new MontageResponseDTO(montage.getName(),videoResponseDTOs,montage.getPrompt());
+        return new MontageResponseDTO(montage.getName(),videoResponseDTOs,montage.getPrompt(),null);
     }
 
     public MontageResponseDTO createMontage(MontageRequestDTO montageRequestDTO) {
@@ -75,15 +63,16 @@ public class MontageService {
                videoIds.add(v.getVideoId());
            }
            List<Video> videosInMontage = videoService.getVideosByVideoIds(videoIds);
+           // Adds this montage to each video in db
            for (Video v : videosInMontage) {
                videoService.updateVideo(v,montage);
            }
            // this can surely be put into one for loop
            montage.setVideos(videosInMontage);
-           deleteTrimmedUploads();
-           notify(montageRequestDTO.name() +" created!",  "/montages/"+montageRequestDTO.name());
+           //notify(montageRequestDTO.name() +" created!",  "/montages/"+montageRequestDTO.name());
            // add topic to send montage path to tsx component
-           return convertToDTO(montageRepo.save(montage));
+           String preSignedUrl = s3Service.generatePresignedGetUrl("bucket","montages/"+montageRequestDTO.name()+".mp4").toString() ;
+           return convertToDTO(montageRepo.save(montage),preSignedUrl);
        }
        else{
            System.out.println("ERROR EXIT CODE: "+ffmpegCode);
@@ -103,6 +92,7 @@ public class MontageService {
                     + "\"temperature\": 0.2,"
                     + "\"stream\": false"
                     + "}";
+            // montageRequestDTO.sentence() is gonna be "Give me all the timestamps of ___ in this format: 00:00-00:04, 00:04-00:08, 00:11-00:13
             HttpResponse<TwelveLabsTimeStampResponse> response =
                     Unirest.post("https://api.twelvelabs.io/v1.3/analyze")
                             .header("x-api-key", apiKey)
@@ -112,7 +102,7 @@ public class MontageService {
 
             if (response.getStatus() == 200 || response.getStatus() == 201) {
                 timestamps.add(response.getBody().data());
-                notify("Successfully extracted " + montageRequestDTO.prompt() + " from " + v.getName(), null);
+                //notify("Successfully extracted " + montageRequestDTO.prompt() + " from " + v.getName(), null);
             }
 
         }
@@ -125,7 +115,7 @@ public class MontageService {
 
         //timestamps in format of [[00:00-00:04, 00:04-00:08, 00:11-00:13],[00:01-00:03, 00:10-00:12]]
         for (int i = 0; i < timeStamps.size(); i++) {
-            if (timeStamps.get(i).equals("")) {
+            if (timeStamps.get(i).isEmpty()) {
                 System.out.println("\n\n\n\nYo this is like empty right!\n");
             }
             // POSSIBILITY OF TIMESTAMPS BEING NONE I THINK
@@ -133,13 +123,9 @@ public class MontageService {
                 if (!timeStamp.isEmpty()){
                     HashMap<String,String> interval = new HashMap<>();
                     String[] times = timeStamp.split("-");
-                    for (int j = 0; j < times.length; j++) {
-                        System.out.println("TIMES ELEMENT:" + times[j]);
-                    }
                     interval.put("start", "00:"+times[0]+".000");
                     interval.put("end", "00:"+times[1]+".000");
                     interval.put("video",videoRequestDTOs.get(i).getName());
-                    System.out.println(interval.get("start")+" "+interval.get("end")+" "+interval.get("video"));
                     intervals.add(interval);
                 }
                 else{
@@ -151,16 +137,26 @@ public class MontageService {
         int i = 0;
         for(HashMap<String,String> interval : intervals)
         {
+            System.out.println(interval.get("start")+" "+interval.get("end")+" "+interval.get("video"));
             try {
-                String trimmedVideoName = interval.get("video")+"-trimmed-"+i+".mp4";
-                String inputPath =projectPath+ "/uploads/"+interval.get("video");
+                URL videoUrl = s3Service.generatePresignedGetUrl("tidier","test/"+interval.get("video"));
+                System.out.println(videoUrl.toString());
+                File inputTempFile = downloadPresignedUrlToTempFile(videoUrl.toString());
+                //File outputTempFile = Files.createTempFile("trimmedTest-"+i+"-", interval.get("video")+".mp4").toFile();
+                //String outputTempFilePath = outputTempFile.getAbsolutePath();
+                //trimmedVideosToCombine.add(outputTempFilePath);
+
+                String trimmedVideoName = interval.get("video")+"-trimmed-"+ UUID.randomUUID().toString() +".mp4";
                 String outputPath = projectPath + "/trimmed-uploads/"+trimmedVideoName;
                 trimmedVideosToCombine.add(trimmedVideoName);
-                System.out.println("\n\n\n\n"+trimmedVideoName+"\n\n\n\n");
+
+                //Problem is that I'm pretty sure the local version ffmpeg creates the file, but for the cloud one i made the file before which didnt work
+                Path tempPath = Paths.get(System.getProperty("java.io.tmpdir"),trimmedVideoName);
 
                 ProcessBuilder pb = new ProcessBuilder(
                         "ffmpeg",
-                        "-i", inputPath,
+                        "-y", // overwrite if I need too
+                        "-i", inputTempFile.getAbsolutePath(),
                         "-ss", interval.get("start"),
                         "-to", interval.get("end"),
                         "-c:v", "libx264",
@@ -168,7 +164,7 @@ public class MontageService {
                         "-preset", "fast",
                         "-c:a", "aac",
                         "-b:a", "192k",
-                        outputPath
+                        tempPath.toString()
                 );
 
                 pb.redirectErrorStream(true); // merge stderr into stdout
@@ -176,73 +172,66 @@ public class MontageService {
 
                 // Capture output (optional, for debugging)
                 BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-//                String line;
-//                while ((line = reader.readLine()) != null) {
-//                    System.out.println(line);
-//                }
-
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    System.out.println(line);
+                }
                 int exitCode = process.waitFor();
                 System.out.println("FFmpeg finished with exit code " + exitCode);
             } catch (Exception e) {
                 e.printStackTrace();
-                System.out.println(e.getMessage());
+                System.out.println("ERROR WAS CAUGHT: \n"+e.getMessage());
                 return null;
             }
             i++;
         }
-        notify("Finished trimming videos...", null);
+        //notify("Finished trimming videos...", null);
         return trimmedVideosToCombine;
     }
 
     public int combineVideos(List<String> trimmedFiles, String outputFileName) {
-        notify("Combining videos...", null);
+        //notify("Combining videos...", null);
+        String tempDir = System.getProperty("java.io.tmpdir");
         if(trimmedFiles == null) {
             return 1;
         }
+
         int exitCode = 100;
         try {
-            // 1. Create videos.txt
-            File listFile = new File("videos.txt");
-            try (BufferedWriter writer = new BufferedWriter(new FileWriter(listFile))) {
+            // 1. Create text file to list trimmed video paths and output file to place montage in
+            File concatFile = Files.createTempFile("videos-", ".txt").toFile();
+            Path tempPath = Paths.get(tempDir ,outputFileName+".mp4");
+            try (BufferedWriter writer = new BufferedWriter(new FileWriter(concatFile))) {
                 for (String file : trimmedFiles) {
-                    writer.write("file 'trimmed-uploads/" + file + "'\n");
-                    System.out.println("File supposed to go in videos.txt: " + file);
+                    writer.write("file '"+tempDir + file + "'\n");
                 }
             }
-
-
-
             // 2. Run ffmpeg with re-encoding for compatibility with mac's finder
             ProcessBuilder pb = new ProcessBuilder(
-                    "ffmpeg", "-f", "concat", "-safe", "0",
-                    "-i", "videos.txt",
+                    "ffmpeg","-y", "-f", "concat", "-safe", "0",
+                    "-i", concatFile.getAbsolutePath(),
                     "-c:v", "libx264", "-crf", "23", "-preset", "veryfast",
                     "-c:a", "aac",
-                    outputFileName
+                    tempPath.toString()
             );
 
             pb.redirectErrorStream(true);
             Process process = pb.start();
-
             // Log output in case of errors
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(process.getInputStream()))) {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
-                  //  System.out.println(line);
+                    System.out.println(line);
                 }
             }
-
             exitCode = process.waitFor();
             if (exitCode == 0) {
-                Path projectRoot = Path.of(System.getProperty("user.dir")); //returns the directory where the Java process was started (usually your project root when you run the app)
-                Path source = projectRoot.resolve(outputFileName);
-                Path target = projectRoot.resolve("frontend/public/montages/"+outputFileName);
-
-                Files.move(source, target, StandardCopyOption.REPLACE_EXISTING);
-                listFile.delete();
-
-
+                for (String file : trimmedFiles) {
+                    Files.deleteIfExists(Paths.get(file));
+                }
+                File montageFile = tempPath.toFile();
+                Files.deleteIfExists(Paths.get(concatFile.getAbsolutePath()));
+                s3Service.putObject("tidier","montages/"+outputFileName+".mp4", montageFile);
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -291,4 +280,33 @@ public class MontageService {
          montageRepo.deleteById(montageId);
          return "Successfully deleted montage with id:" + montageId;
     }
+
+    public File downloadPresignedUrlToTempFile(String presignedUrl) throws IOException {
+
+        File tempFile = Files.createTempFile("s3-video-", ".mp4").toFile();
+
+        URI uri = URI.create(presignedUrl);
+        URL url = uri.toURL();
+
+        try (
+                InputStream in = url.openStream();
+                OutputStream out = new FileOutputStream(tempFile)
+        ) {
+            byte[] buffer = new byte[8192];
+            int bytesRead;
+
+            while ((bytesRead = in.read(buffer)) != -1) {
+                out.write(buffer, 0, bytesRead);
+            }
+        }
+
+        return tempFile;
+    }
+
+    public String getVideoUrl(String key) {
+        String FAKE_KEY = "montages/test-montage-of-roads.mp4";
+        return s3Service.generatePresignedGetUrl("tidier", FAKE_KEY ).toString();
+    }
+
+
 }
